<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/white"
    tools:context=".ProfileActivity">

    <!-- Botón de regreso -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/btn_back_desc"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/grayBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Imagen de perfil -->
    <ImageView
        android:id="@+id/imgPerfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_user"
        android:contentDescription="Imagen de perfil"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Nombre -->
    <TextView
        android:id="@+id/label_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_prof_name"
        android:textSize="16sp"
        android:textColor="@color/grayBlue"
        app:layout_constraintTop_toBottomOf="@id/imgPerfil"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="0dp"
        android:padding="9dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edittext"
        android:hint="@string/txt_hint_name"
        android:textSize="16sp"
        android:textColor="@color/grayBlue"
        android:textColorHint="@color/grayBlueLight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_nombre"/>

    <!-- Correo -->
    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_prof_correo"
        android:textSize="16sp"
        android:textColor="@color/grayBlue"
        app:layout_constraintTop_toBottomOf="@id/etNombre"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/txt_ejemplo_correo"
        android:textSize="16sp"
        android:textColor="@color/grayBlue"
        android:background="@drawable/custom_edittext"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_email"/>

    <!-- Número de reportes -->
    <TextView
        android:id="@+id/label_reportes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_reportes_realizados"
        android:textSize="16sp"
        android:textColor="@color/grayBlue"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtReportes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_numero_reportes"
        android:textSize="16sp"
        android:textColor="@color/grayBlue"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/label_reportes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <!-- Fecha de registro -->
    <TextView
        android:id="@+id/label_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fecha_registro"
        android:textSize="16sp"
        android:textColor="@color/grayBlue"
        app:layout_constraintTop_toBottomOf="@id/txtReportes"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_ejemplo_fecha"
        android:textSize="16sp"
        android:textColor="@color/grayBlue"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/label_registro"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"/>

    <!-- Botón Guardar cambios -->
    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/grayBlue"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRegistro" />

</androidx.constraintlayout.widget.ConstraintLayout>
